[tool.poetry]
name = "aganitha-paper-fetcher"
version = "0.1.0"
description = "A CLI tool to fetch PubMed papers with non-academic authors"
authors = ["Akhila Bussu <your.email@example.com>"]
readme = "README.md"
packages = [{include = "fetcher"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
